--- a/Gdp,Temp,Population.ipynb
+++ b/Gdp,Temp,Population.ipynb
@@ -9,7 +9,8 @@
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import pandas as pd\n",
-    "\n",
+    "import unicodedata\n",
+    "import re\n",
     "\n",
     "worldcup_teams =['Egypt', 'Russia', 'Saudi Arabia', 'Uruguay', 'Iran', 'Morocco',\n",
     "       'Portugal', 'Spain', 'Australia', 'Denmark', 'France', 'Peru',\n",
@@ -21,12 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unicodedata\n",
-    "\n",
     "def scrape_gdp_pp():\n",
     "    url = \"https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)_per_capita\"\n",
     "    my_page = requests.get(url)\n",
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +115,7 @@
        "4   50206       Germany"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +221,7 @@
        "4  Costa Rica  24.80"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,53 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gdp_pp     int64\n",
-       "name      object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gdp_df.dtypes\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name     object\n",
-       "temp    float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temps.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -291,14 +244,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scrape_population():\n",
+    "    url = \"https://en.wikipedia.org/wiki/List_of_countries_by_population_(United_Nations)\"\n",
+    "    my_page = requests.get(url)\n",
+    "    soup = BeautifulSoup(my_page.content, \"lxml\")\n",
+    "    tables = soup.find_all('table',{'class':'wikitable'})\n",
+    "    country_rows = tables[0].findAll('tr')\n",
+    "\n",
+    "    countries_popu = []\n",
+    "\n",
+    "    for country in country_rows[2:]:\n",
+    "\n",
+    "        country_data = country.findAll('td')\n",
+    "\n",
+    "        country_name_raw = country_data[1].text\n",
+    "        country_name = country_name_raw.strip()\n",
+    "        m = re.search('\\[\\w+\\]', country_name_raw)\n",
+    "        if (m != None):\n",
+    "            citation = m.group(0)\n",
+    "            country_name = country_name.replace(citation, \"\")\n",
+    "\n",
+    "        population = int(country_data[5].text.strip().replace(',',''))\n",
+    "\n",
+    "        if (country_name in worldcup_teams):\n",
+    "            countries_popu.append({\"name\":country_name,'population':population})\n",
+    "            \n",
+    "    return pd.DataFrame(countries_popu)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries_popu = scrape_population()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,6 +314,7 @@
        "      <th>name</th>\n",
        "      <th>temp</th>\n",
        "      <th>gdp_pp</th>\n",
+       "      <th>population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -333,248 +323,274 @@
        "      <td>Senegal</td>\n",
        "      <td>27.85</td>\n",
        "      <td>2678</td>\n",
+       "      <td>15850567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Nigeria</td>\n",
        "      <td>26.80</td>\n",
        "      <td>5927</td>\n",
+       "      <td>190886311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Panama</td>\n",
        "      <td>25.40</td>\n",
        "      <td>24262</td>\n",
+       "      <td>4098587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Brazil</td>\n",
        "      <td>24.95</td>\n",
        "      <td>15500</td>\n",
+       "      <td>209288278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Costa Rica</td>\n",
        "      <td>24.80</td>\n",
        "      <td>17149</td>\n",
+       "      <td>4905769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Saudi Arabia</td>\n",
        "      <td>24.65</td>\n",
        "      <td>55263</td>\n",
+       "      <td>32938213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Colombia</td>\n",
        "      <td>24.50</td>\n",
        "      <td>14455</td>\n",
+       "      <td>49065615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Egypt</td>\n",
        "      <td>22.10</td>\n",
        "      <td>12994</td>\n",
+       "      <td>97553151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Australia</td>\n",
        "      <td>21.65</td>\n",
        "      <td>49882</td>\n",
+       "      <td>24450561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Mexico</td>\n",
        "      <td>21.00</td>\n",
        "      <td>19480</td>\n",
+       "      <td>129163276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Peru</td>\n",
        "      <td>19.60</td>\n",
        "      <td>13342</td>\n",
+       "      <td>32165485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Tunisia</td>\n",
        "      <td>19.20</td>\n",
        "      <td>11987</td>\n",
+       "      <td>11532127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Uruguay</td>\n",
        "      <td>17.55</td>\n",
        "      <td>22445</td>\n",
+       "      <td>3456750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Iran</td>\n",
        "      <td>17.25</td>\n",
        "      <td>20030</td>\n",
+       "      <td>81162788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Morocco</td>\n",
        "      <td>17.10</td>\n",
        "      <td>8612</td>\n",
+       "      <td>35739580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Portugal</td>\n",
        "      <td>15.15</td>\n",
        "      <td>30258</td>\n",
+       "      <td>10329506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Argentina</td>\n",
        "      <td>14.80</td>\n",
        "      <td>20677</td>\n",
+       "      <td>44271041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Spain</td>\n",
        "      <td>13.30</td>\n",
        "      <td>38171</td>\n",
+       "      <td>46354321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>South Korea</td>\n",
        "      <td>11.50</td>\n",
        "      <td>39387</td>\n",
+       "      <td>50982212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Japan</td>\n",
        "      <td>11.15</td>\n",
        "      <td>42659</td>\n",
+       "      <td>127484450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Croatia</td>\n",
        "      <td>10.90</td>\n",
        "      <td>24095</td>\n",
+       "      <td>4189353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>France</td>\n",
        "      <td>10.70</td>\n",
        "      <td>43550</td>\n",
+       "      <td>64979548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Serbia</td>\n",
        "      <td>10.55</td>\n",
        "      <td>15164</td>\n",
+       "      <td>8790574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Belgium</td>\n",
        "      <td>9.55</td>\n",
        "      <td>46301</td>\n",
+       "      <td>11429336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Germany</td>\n",
        "      <td>8.50</td>\n",
        "      <td>50206</td>\n",
+       "      <td>82114224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>8.45</td>\n",
        "      <td>43620</td>\n",
+       "      <td>66181585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Poland</td>\n",
        "      <td>7.85</td>\n",
        "      <td>29251</td>\n",
+       "      <td>38170712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Denmark</td>\n",
        "      <td>7.50</td>\n",
        "      <td>49613</td>\n",
+       "      <td>5733551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Switzerland</td>\n",
        "      <td>5.50</td>\n",
        "      <td>61360</td>\n",
+       "      <td>8476005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Sweden</td>\n",
        "      <td>2.10</td>\n",
        "      <td>51264</td>\n",
+       "      <td>9910701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>Iceland</td>\n",
        "      <td>1.75</td>\n",
        "      <td>52150</td>\n",
+       "      <td>335025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Russia</td>\n",
        "      <td>-5.10</td>\n",
        "      <td>27890</td>\n",
+       "      <td>143989754</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name   temp  gdp_pp\n",
-       "0          Senegal  27.85    2678\n",
-       "1          Nigeria  26.80    5927\n",
-       "2           Panama  25.40   24262\n",
-       "3           Brazil  24.95   15500\n",
-       "4       Costa Rica  24.80   17149\n",
-       "5     Saudi Arabia  24.65   55263\n",
-       "6         Colombia  24.50   14455\n",
-       "7            Egypt  22.10   12994\n",
-       "8        Australia  21.65   49882\n",
-       "9           Mexico  21.00   19480\n",
-       "10            Peru  19.60   13342\n",
-       "11         Tunisia  19.20   11987\n",
-       "12         Uruguay  17.55   22445\n",
-       "13            Iran  17.25   20030\n",
-       "14         Morocco  17.10    8612\n",
-       "15        Portugal  15.15   30258\n",
-       "16       Argentina  14.80   20677\n",
-       "17           Spain  13.30   38171\n",
-       "18     South Korea  11.50   39387\n",
-       "19           Japan  11.15   42659\n",
-       "20         Croatia  10.90   24095\n",
-       "21          France  10.70   43550\n",
-       "22          Serbia  10.55   15164\n",
-       "23         Belgium   9.55   46301\n",
-       "24         Germany   8.50   50206\n",
-       "25  United Kingdom   8.45   43620\n",
-       "26          Poland   7.85   29251\n",
-       "27         Denmark   7.50   49613\n",
-       "28     Switzerland   5.50   61360\n",
-       "29          Sweden   2.10   51264\n",
-       "30         Iceland   1.75   52150\n",
-       "31          Russia  -5.10   27890"
+       "              name   temp  gdp_pp  population\n",
+       "0          Senegal  27.85    2678    15850567\n",
+       "1          Nigeria  26.80    5927   190886311\n",
+       "2           Panama  25.40   24262     4098587\n",
+       "3           Brazil  24.95   15500   209288278\n",
+       "4       Costa Rica  24.80   17149     4905769\n",
+       "5     Saudi Arabia  24.65   55263    32938213\n",
+       "6         Colombia  24.50   14455    49065615\n",
+       "7            Egypt  22.10   12994    97553151\n",
+       "8        Australia  21.65   49882    24450561\n",
+       "9           Mexico  21.00   19480   129163276\n",
+       "10            Peru  19.60   13342    32165485\n",
+       "11         Tunisia  19.20   11987    11532127\n",
+       "12         Uruguay  17.55   22445     3456750\n",
+       "13            Iran  17.25   20030    81162788\n",
+       "14         Morocco  17.10    8612    35739580\n",
+       "15        Portugal  15.15   30258    10329506\n",
+       "16       Argentina  14.80   20677    44271041\n",
+       "17           Spain  13.30   38171    46354321\n",
+       "18     South Korea  11.50   39387    50982212\n",
+       "19           Japan  11.15   42659   127484450\n",
+       "20         Croatia  10.90   24095     4189353\n",
+       "21          France  10.70   43550    64979548\n",
+       "22          Serbia  10.55   15164     8790574\n",
+       "23         Belgium   9.55   46301    11429336\n",
+       "24         Germany   8.50   50206    82114224\n",
+       "25  United Kingdom   8.45   43620    66181585\n",
+       "26          Poland   7.85   29251    38170712\n",
+       "27         Denmark   7.50   49613     5733551\n",
+       "28     Switzerland   5.50   61360     8476005\n",
+       "29          Sweden   2.10   51264     9910701\n",
+       "30         Iceland   1.75   52150      335025\n",
+       "31          Russia  -5.10   27890   143989754"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "combined_df = combined_df.merge(countries_popu,on='name')\n",
     "combined_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
