--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -20,8 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('data/cleaned/train.csv')\n",
@@ -30,8 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(2018)\n",
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -55,15 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5527929155313351\n",
-      "0.5354223433242506\n"
+      "0.5516884906960716\n",
+      "0.5619834710743802\n"
      ]
     }
    ],
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -85,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5630108991825613\n",
-      "0.553133514986376\n"
+      "0.562026188835286\n",
+      "0.5661157024793388\n"
      ]
     }
    ],
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -115,15 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5480245231607629\n",
-      "0.5149863760217984\n"
+      "0.5503101309441765\n",
+      "0.5482093663911846\n"
      ]
     }
    ],
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -145,15 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6304495912806539\n",
-      "0.5463215258855586\n"
+      "0.6212956581667816\n",
+      "0.5523415977961432\n"
      ]
     }
    ],
@@ -164,15 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.47445504087193463\n",
-      "0.4673024523160763\n"
+      "0.4727773949000689\n",
+      "0.47796143250688705\n"
      ]
     }
    ],
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +208,7 @@
        "0.53125"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +228,7 @@
        "0.5"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.53125"
+       "0.546875"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.546875"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +288,7 @@
        "0.421875"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
