--- a/team-ratings-model.ipynb
+++ b/team-ratings-model.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,38 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('data/cleaned/train.csv')\n",
-    "test_df = pd.read_csv('data/cleaned/test.csv')"
+    "train = pd.read_csv('data/train_team.csv')\n",
+    "test = pd.read_csv('data/test_team.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(2018)\n",
-    "train, validation = train_test_split(train_df, test_size = 0.2)\n",
-    "y_train = train['home_win'].as_matrix()\n",
-    "X_train = train.drop(['home_win'], axis = 1).as_matrix()\n",
-    "y_validation = validation['home_win'].as_matrix()\n",
-    "X_validation = validation.drop(['home_win'], axis = 1).as_matrix()\n"
+    "train, validation = train_test_split(train, test_size = 0.2)\n",
+    "y_train = train.loc[:,'home_win'].ravel()\n",
+    "X_train = train.drop('home_win', axis = 1)\n",
+    "y_validation = validation.loc[:,'home_win'].ravel()\n",
+    "X_validation = validation.drop(['home_win'], axis = 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr_model = LogisticRegressionCV(solver = 'lbfgs', max_iter = 5000, cv = 5, multi_class='multinomial').fit(X_train, y_train)"
@@ -59,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5516884906960716\n",
-      "0.5619834710743802\n"
+      "0.5195344970906068\n",
+      "0.47840531561461797\n"
      ]
     }
    ],
@@ -78,10 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lda_model = LinearDiscriminantAnalysis().fit(X_train, y_train)"
@@ -89,15 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.562026188835286\n",
-      "0.5661157024793388\n"
+      "0.5187032418952618\n",
+      "0.47840531561461797\n"
      ]
     }
    ],
@@ -108,10 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "qda_model = QuadraticDiscriminantAnalysis().fit(X_train, y_train)"
@@ -119,15 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5503101309441765\n",
-      "0.5482093663911846\n"
+      "0.5361596009975063\n",
+      "0.4750830564784053\n"
      ]
     }
    ],
@@ -138,10 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "rf_model = RandomForestClassifier(min_samples_leaf = 20, n_estimators=100).fit(X_train, y_train)"
@@ -149,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6212956581667816\n",
-      "0.5523415977961432\n"
+      "0.57190357439734\n",
+      "0.48172757475083056\n"
      ]
     }
    ],
@@ -168,15 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4727773949000689\n",
-      "0.47796143250688705\n"
+      "0.4455527847049044\n",
+      "0.45514950166112955\n"
      ]
     }
    ],
@@ -187,28 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "y_test = test_df['home_win'].as_matrix()\n",
-    "X_test = test_df.drop(['home_win'], axis = 1).as_matrix()"
+    "y_test = test.loc[:,'home_win'].ravel()\n",
+    "X_test = test.drop('home_win', axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.53125"
+       "0.6015625"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.6015625"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.546875"
+       "0.6015625"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.546875"
+       "0.6015625"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.421875"
+       "0.4296875"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,31 +280,13 @@
    "source": [
     "accuracy_score(np.ones(len(y_test)), y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:gen2]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-gen2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
