Updated with player data

--- a/personal-ratings-cleaning.ipynb
+++ b/personal-ratings-cleaning.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
+       "      <th>team</th>\n",
        "      <th>date</th>\n",
        "      <th>name</th>\n",
        "      <th>overall</th>\n",
@@ -696,7 +696,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     country                      date              name overall potential  \\\n",
+       "        team                      date              name overall potential  \\\n",
        "0  Argentina 2006-08-30 00:00:00+00:00  R. Abbondanzieri      84        85   \n",
        "1  Argentina 2006-08-30 00:00:00+00:00       N. Burdisso      72        76   \n",
        "2  Argentina 2006-08-30 00:00:00+00:00          R. Ayala      86        86   \n",
@@ -711,7 +711,7 @@
        "4    €0   €0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
    "source": [
     "player_stats_df = pd.concat(player_stats, axis=0).reset_index()\n",
     "player_stats_df.drop('level_2', axis=1, inplace=True)\n",
-    "player_stats_df.columns = ['country', 'date', 'name', 'overall',\n",
+    "player_stats_df.columns = ['team', 'date', 'name', 'overall',\n",
     "                          'potential', 'value', 'wage']\n",
     "player_stats_df.head()"
    ]
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
+       "      <th>team</th>\n",
        "      <th>date</th>\n",
        "      <th>name</th>\n",
        "      <th>overall</th>\n",
@@ -822,7 +822,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     country                      date              name overall potential  \\\n",
+       "        team                      date              name overall potential  \\\n",
        "0  Argentina 2006-08-30 00:00:00+00:00  R. Abbondanzieri      84        85   \n",
        "1  Argentina 2006-08-30 00:00:00+00:00       N. Burdisso      72        76   \n",
        "2  Argentina 2006-08-30 00:00:00+00:00          R. Ayala      86        86   \n",
@@ -837,7 +837,7 @@
        "4                   0.0                   0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,12 +866,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "player_stats_df.to_csv('data/player_stats_clean.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us come up with some team statistics from these player data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_stats_df['overall'] = pd.to_numeric(player_stats_df['overall'])\n",
+    "player_stats_df['potential'] = pd.to_numeric(player_stats_df['potential'])\n",
+    "player_stats_df['growth'] = player_stats_df['potential'] - player_stats_df['overall']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_stats_players = player_stats_df.groupby(['team', 'date'], \n",
+    "                                             as_index=False).agg({'wage_euros_thousands': np.mean,\n",
+    "                                                                  'value_euros_millions': np.mean,\n",
+    "                                                                  'growth': np.mean,\n",
+    "                                                                  'overall': 'first'}) # goalkeeper's overall\n",
+    "team_stats_players.rename({'overall': 'goalkeeeper_overall'}, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>date</th>\n",
+       "      <th>wage_euros_thousands</th>\n",
+       "      <th>value_euros_millions</th>\n",
+       "      <th>growth</th>\n",
+       "      <th>goalkeeeper_overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2006-08-30 00:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2007-02-22 00:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.32</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2007-08-30 00:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2008-02-22 00:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2008-08-30 00:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        team                      date  wage_euros_thousands  \\\n",
+       "0  Argentina 2006-08-30 00:00:00+00:00                   0.0   \n",
+       "1  Argentina 2007-02-22 00:00:00+00:00                   0.0   \n",
+       "2  Argentina 2007-08-30 00:00:00+00:00                   0.0   \n",
+       "3  Argentina 2008-02-22 00:00:00+00:00                   0.0   \n",
+       "4  Argentina 2008-08-30 00:00:00+00:00                   0.0   \n",
+       "\n",
+       "   value_euros_millions  growth  goalkeeeper_overall  \n",
+       "0                   0.0    4.88                   84  \n",
+       "1                   0.0    5.32                   84  \n",
+       "2                   0.0    3.84                   79  \n",
+       "3                   0.0    3.84                   79  \n",
+       "4                   0.0    4.00                   82  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_stats_players.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_stats_players.to_csv('data/team_stats_players.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
