--- a/sofifa-model.ipynb
+++ b/sofifa-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from predict_test_data import predict_test_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,21 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(2018)\n",
     "train, validation = train_test_split(train, test_size = 0.2)\n",
-    "y_train = train.loc[:,'home_win'].ravel()\n",
+    "y_train = train['home_win'].ravel()\n",
     "X_train = train.drop('home_win', axis = 1)\n",
     "y_validation = validation.loc[:,'home_win'].ravel()\n",
-    "X_validation = validation.drop(['home_win'], axis = 1)\n"
+    "X_validation = validation.drop(['home_win'], axis = 1)\n",
+    "y_test = test['home_win'].ravel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5146276595744681\n",
-      "0.519893899204244\n"
+      "0.5147058823529411\n",
+      "0.5146666666666667\n"
      ]
     }
    ],
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5152925531914894\n",
-      "0.5092838196286472\n"
+      "0.517379679144385\n",
+      "0.528\n"
      ]
     }
    ],
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5678191489361702\n",
-      "0.4270557029177719\n"
+      "0.5668449197860963\n",
+      "0.43733333333333335\n"
      ]
     }
    ],
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6037234042553191\n",
-      "0.5172413793103449\n"
+      "0.6049465240641712\n",
+      "0.5146666666666667\n"
      ]
     }
    ],
@@ -154,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4474734042553192\n",
-      "0.4217506631299735\n"
+      "0.43716577540106955\n",
+      "0.4613333333333333\n"
      ]
     }
    ],
@@ -173,23 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test = test.loc[:,'home_win'].ravel()\n",
-    "X_test = test.drop('home_win', axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5859375"
+       "array([1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1,\n",
+       "       0, 2, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1])"
       ]
      },
      "execution_count": 60,
@@ -198,27 +192,29 @@
     }
    ],
    "source": [
-    "lr_model.score(X_test, y_test)"
+    "lr_model.predict(test.drop(['home_win', 'Group'], axis = 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.59375"
+       "array([1, 0, 0, 2, 1, 2, 0, 1, 0, 0, 2, 1, 1, 0, 0, 0, 1, 1, 1, 0, 2, 1,\n",
+       "       0, 1, 1, 0, 1, 0, 1, 1, 2, 0, 1, 1, 2, 2, 0, 2, 0, 0, 1, 0, 0, 2,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lda_model.score(X_test, y_test)"
+    "y_test"
    ]
   },
   {
@@ -227,9 +223,94 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26409419 0.29335991]]\n",
+      "[[0.27344747 0.33659447]]\n",
+      "[[0.12291911 0.27634627]]\n",
+      "[[0.26183715 0.2873803 ]]\n",
+      "[[0.18803981 0.28881251]]\n",
+      "[[0.10543993 0.26620213]]\n",
+      "[[0.30444117 0.30491284]]\n",
+      "[[0.43038224 0.25068949]]\n",
+      "[[0.3105627  0.31224456]]\n",
+      "[[0.26380476 0.29569207]]\n",
+      "[[0.4323178  0.28846051]]\n",
+      "[[0.31696003 0.32665989]]\n",
+      "[[0.27861549 0.32119866]]\n",
+      "[[0.37527236 0.28398837]]\n",
+      "[[0.2677672  0.28129988]]\n",
+      "[[0.18995516 0.30400291]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.484375"
+       "[1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 2,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1]"
       ]
      },
      "execution_count": 62,
@@ -238,41 +319,189 @@
     }
    ],
    "source": [
-    "qda_model.score(X_test, y_test)"
+    "predict_test_data(test, X_train.columns, lr_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26409419 0.29335991]]\n",
+      "[[0.27344747 0.33659447]]\n",
+      "[[0.12291911 0.27634627]]\n",
+      "[[0.26183715 0.2873803 ]]\n",
+      "[[0.18803981 0.28881251]]\n",
+      "[[0.10543993 0.26620213]]\n",
+      "[[0.30444117 0.30491284]]\n",
+      "[[0.43038224 0.25068949]]\n",
+      "[[0.3105627  0.31224456]]\n",
+      "[[0.26380476 0.29569207]]\n",
+      "[[0.4323178  0.28846051]]\n",
+      "[[0.31696003 0.32665989]]\n",
+      "[[0.27861549 0.32119866]]\n",
+      "[[0.37527236 0.28398837]]\n",
+      "[[0.2677672  0.28129988]]\n",
+      "[[0.18995516 0.30400291]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.5859375"
+       "0.578125"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf_model.score(X_test, y_test)"
+    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lr_model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26193838 0.28513938]]\n",
+      "[[0.341426   0.29100992]]\n",
+      "[[0.16645257 0.31103294]]\n",
+      "[[0.2833266  0.31428305]]\n",
+      "[[0.16597684 0.3345894 ]]\n",
+      "[[0.12276437 0.31041295]]\n",
+      "[[0.31318224 0.33079425]]\n",
+      "[[0.41864757 0.28640271]]\n",
+      "[[0.40763154 0.2818376 ]]\n",
+      "[[0.22611581 0.3258044 ]]\n",
+      "[[0.39434658 0.35404268]]\n",
+      "[[0.27205659 0.34518796]]\n",
+      "[[0.21755775 0.33853319]]\n",
+      "[[0.37162753 0.33978203]]\n",
+      "[[0.27370571 0.33585716]]\n",
+      "[[0.14336507 0.31349678]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5625"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lda_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.65673393 0.03972735]]\n",
+      "[[0.33769414 0.37921008]]\n",
+      "[[0.15889935 0.3684634 ]]\n",
+      "[[0.3993393  0.45807545]]\n",
+      "[[0.04428403 0.35613357]]\n",
+      "[[0.22942285 0.16987229]]\n",
+      "[[0.34736171 0.07347198]]\n",
+      "[[0.55124318 0.32442576]]\n",
+      "[[0.45777323 0.18995174]]\n",
+      "[[0.07313897 0.49748952]]\n",
+      "[[0.46640889 0.02456441]]\n",
+      "[[0.28979214 0.4998115 ]]\n",
+      "[[0.20977394 0.13343026]]\n",
+      "[[0.46931124 0.31258836]]\n",
+      "[[0.18905779 0.25439044]]\n",
+      "[[0.39050028 0.15071203]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.46875"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, qda_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.19990573 0.31661414]]\n",
+      "[[0.31046801 0.36294215]]\n",
+      "[[0.15080269 0.33115919]]\n",
+      "[[0.19729153 0.32581477]]\n",
+      "[[0.16380167 0.24197766]]\n",
+      "[[0.11310393 0.24492373]]\n",
+      "[[0.29040033 0.28701452]]\n",
+      "[[0.42949788 0.28006843]]\n",
+      "[[0.43730943 0.2515754 ]]\n",
+      "[[0.27433375 0.26005043]]\n",
+      "[[0.44802014 0.24399117]]\n",
+      "[[0.28276635 0.38723018]]\n",
+      "[[0.22324685 0.29753621]]\n",
+      "[[0.3179384  0.31060451]]\n",
+      "[[0.21173428 0.36230227]]\n",
+      "[[0.19414093 0.33395531]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5625"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, rf_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4296875"
+       "0.421875"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,9 +520,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gen2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-gen2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
